--- a/exercisepdfs/Ch7/biblio/workshopreprints.bib
+++ b/exercisepdfs/Ch7/biblio/workshopreprints.bib
@@ -55,21 +55,22 @@
 }
 
 @Article{Borchers2010,
-  author      = {David Borchers and Tiago Marques and Thorvaldur Gunnlaugsson and Peter Jupp},
-  title       = {Estimating distance sampling detection functions when distances are measured with errors},
-  journal     = {Journal of Agricultural, Biological, and Environmental Statistics},
-  year        = {2010},
-  volume      = {15},
-  number      = {3},
-  pages       = {346-361},
-  month       = {mar},
-  doi         = {10.1007/s13253-010-0021-y},
-  file        = {:borchers etal (2010) Estimating distance sampling detection functions when distances are measured with errors.pdf:PDF},
-  owner       = {Tiago},
-  publisher   = {Springer Nature},
-  subdatabase = {cvonline, distance, citBiom2004},
-  timestamp   = {2008.06.27},
-  url         = {https://doi.org/10.1007/s13253-010-0021-y},
+  author        = {David Borchers and Tiago Marques and Thorvaldur Gunnlaugsson and Peter Jupp},
+  title         = {Estimating distance sampling detection functions when distances are measured with errors},
+  journal       = {Journal of Agricultural, Biological, and Environmental Statistics},
+  year          = {2010},
+  volume        = {15},
+  number        = {3},
+  pages         = {346-361},
+  month         = {mar},
+  __markedentry = {[erexs:1]},
+  doi           = {10.1007/s13253-010-0021-y},
+  file          = {:borchers etal (2010) Estimating distance sampling detection functions when distances are measured with errors.pdf:PDF},
+  owner         = {Tiago},
+  publisher     = {Springer Nature},
+  subdatabase   = {cvonline, distance, citBiom2004},
+  timestamp     = {2008.06.27},
+  url           = {https://doi.org/10.1007/s13253-010-0021-y},
 }
 
 @Article{Buckland_2005,
@@ -155,24 +156,25 @@
 }
 
 @Article{Buckland_2007,
-  author      = {S. T. Buckland and D. L. Borchers and A. Johnston and P. A. Henrys and T. A. Marques},
-  title       = {Line transect methods for plant surveys},
-  journal     = {Biometrics},
-  year        = {2007},
-  volume      = {63},
-  number      = {4},
-  pages       = {989--998},
-  month       = {may},
-  comment     = {http://www.creem.st-and.ac.uk/stb/buckland%20et%20al%20biometrics%202007.pdf
+  author        = {S. T. Buckland and D. L. Borchers and A. Johnston and P. A. Henrys and T. A. Marques},
+  title         = {Line transect methods for plant surveys},
+  journal       = {Biometrics},
+  year          = {2007},
+  volume        = {63},
+  number        = {4},
+  pages         = {989--998},
+  month         = {may},
+  __markedentry = {[erexs:1]},
+  comment       = {http://www.creem.st-and.ac.uk/stb/buckland%20et%20al%20biometrics%202007.pdf
 Review:
 Tenho IMPRESSO},
-  doi         = {10.1111/j.1541-0420.2007.00798.x},
-  file        = {:buckland et al biometrics 2007.pdf:PDF},
-  owner       = {eric},
-  publisher   = {Wiley},
-  subdatabase = {cvonline, distance},
-  timestamp   = {2010.08.17},
-  url         = {https://doi.org/10.1111/j.1541-0420.2007.00798.x},
+  doi           = {10.1111/j.1541-0420.2007.00798.x},
+  file          = {:buckland et al biometrics 2007.pdf:PDF},
+  owner         = {eric},
+  publisher     = {Wiley},
+  subdatabase   = {cvonline, distance},
+  timestamp     = {2010.08.17},
+  url           = {https://doi.org/10.1111/j.1541-0420.2007.00798.x},
 }
 
 @Article{Buckland_2012,
@@ -659,74 +661,78 @@ Tenho IMPRESSO},
 }
 
 @Article{Marques_2003,
-  author      = {Fernanda F. C. Marques and Stephen T. Buckland},
-  title       = {Incorporating covariates into standard line transect analyses},
-  journal     = {Biometrics},
-  year        = {2003},
-  volume      = {59},
-  number      = {4},
-  pages       = {924--935},
-  month       = {dec},
-  comment     = {http://www.creem.st-and.ac.uk/stb/biometrics_marques_Buckland.pdf},
-  doi         = {10.1111/j.0006-341x.2003.00107.x},
-  file        = {:marques and buckland biom 2003.pdf:PDF},
-  owner       = {eric},
-  publisher   = {Wiley},
-  subdatabase = {distance},
-  timestamp   = {2010.08.17},
-  url         = {https://doi.org/10.1111/j.0006-341x.2003.00107.x},
+  author        = {Fernanda F. C. Marques and Stephen T. Buckland},
+  title         = {Incorporating covariates into standard line transect analyses},
+  journal       = {Biometrics},
+  year          = {2003},
+  volume        = {59},
+  number        = {4},
+  pages         = {924--935},
+  month         = {dec},
+  __markedentry = {[erexs:1]},
+  comment       = {http://www.creem.st-and.ac.uk/stb/biometrics_marques_Buckland.pdf},
+  doi           = {10.1111/j.0006-341x.2003.00107.x},
+  file          = {:marques and buckland biom 2003.pdf:PDF},
+  owner         = {eric},
+  publisher     = {Wiley},
+  subdatabase   = {distance},
+  timestamp     = {2010.08.17},
+  url           = {https://doi.org/10.1111/j.0006-341x.2003.00107.x},
 }
 
 @Article{Marques_2001,
-  author      = {Fernanda F.C. Marques and Stephen T. Buckland and David Goffin and Camilla E. Dixon and David L. Borchers and Brenda A. Mayle and Andrew J. Peace},
-  title       = {Estimating deer abundance from line transect surveys of dung: sika deer in southern {S}cotland},
-  journal     = {Journal of Applied Ecology},
-  year        = {2001},
-  volume      = {38},
-  number      = {2},
-  pages       = {349--363},
-  month       = {apr},
-  comment     = {http://dolphin.mcs.st-and.ac.uk/marques%20et%20al%20jappecol%202001.pdf},
-  doi         = {10.1046/j.1365-2664.2001.00584.x},
-  file        = {:marques et al j appl ecol 2001.pdf:PDF},
-  owner       = {eric},
-  publisher   = {Wiley},
-  subdatabase = {distance},
-  timestamp   = {2010.08.17},
-  url         = {https://doi.org/10.1046/j.1365-2664.2001.00584.x},
+  author        = {Fernanda F.C. Marques and Stephen T. Buckland and David Goffin and Camilla E. Dixon and David L. Borchers and Brenda A. Mayle and Andrew J. Peace},
+  title         = {Estimating deer abundance from line transect surveys of dung: sika deer in southern {S}cotland},
+  journal       = {Journal of Applied Ecology},
+  year          = {2001},
+  volume        = {38},
+  number        = {2},
+  pages         = {349--363},
+  month         = {apr},
+  __markedentry = {[erexs:1]},
+  comment       = {http://dolphin.mcs.st-and.ac.uk/marques%20et%20al%20jappecol%202001.pdf},
+  doi           = {10.1046/j.1365-2664.2001.00584.x},
+  file          = {:marques et al j appl ecol 2001.pdf:PDF},
+  owner         = {eric},
+  publisher     = {Wiley},
+  subdatabase   = {distance},
+  timestamp     = {2010.08.17},
+  url           = {https://doi.org/10.1046/j.1365-2664.2001.00584.x},
 }
 
 @Article{MARQUES_2006,
-  author      = {Marques, Tiago A. and Andersen, Magnus and Christensen-Dalsgaard, Signe and Belikov, Stanislav and Boltunov, Andrei and Wiig, Oystein and Buckland, Stephen T. and Aars, Jon},
-  title       = {The use of global positioning systems to record distances in a helicopter line-transect survey},
-  journal     = {Wildlife Society Bulletin},
-  year        = {2006},
-  volume      = {34},
-  number      = {3},
-  pages       = {759--763},
-  month       = {oct},
-  comment     = {http://files.getdropbox.com/u/142742/mypapers/Marquesetal2006.pdf},
-  doi         = {10.2193/0091-7648(2006)34[759:tuogps]2.0.co;2},
-  file        = {:Marques et al WSB 2006.pdf:PDF},
-  owner       = {Tiago},
-  publisher   = {Wiley},
-  refid       = {4831},
-  subdatabase = {cvonline, distance},
-  timestamp   = {2006.11.22},
-  url         = {https://doi.org/10.2193/0091-7648(2006)34[759:tuogps]2.0.co;2},
+  author        = {Marques, Tiago A. and Andersen, Magnus and Christensen-Dalsgaard, Signe and Belikov, Stanislav and Boltunov, Andrei and Wiig, Oystein and Buckland, Stephen T. and Aars, Jon},
+  title         = {The use of global positioning systems to record distances in a helicopter line-transect survey},
+  journal       = {Wildlife Society Bulletin},
+  year          = {2006},
+  volume        = {34},
+  number        = {3},
+  pages         = {759--763},
+  month         = {oct},
+  __markedentry = {[erexs:1]},
+  comment       = {http://files.getdropbox.com/u/142742/mypapers/Marquesetal2006.pdf},
+  doi           = {10.2193/0091-7648(2006)34[759:tuogps]2.0.co;2},
+  file          = {:Marques et al WSB 2006.pdf:PDF},
+  owner         = {Tiago},
+  publisher     = {Wiley},
+  refid         = {4831},
+  subdatabase   = {cvonline, distance},
+  timestamp     = {2006.11.22},
+  url           = {https://doi.org/10.2193/0091-7648(2006)34[759:tuogps]2.0.co;2},
 }
 
 @Article{Marques_2010,
-  author    = {T. A. Marques and S. T. Buckland and D. L. Borchers and D. Tosh and R. A. {McDonald}},
-  title     = {Point transect sampling along linear features},
-  journal   = {Biometrics},
-  year      = {2010},
-  volume    = {66},
-  number    = {4},
-  pages     = {1247--1255},
-  month     = {jan},
-  issn      = {1541-0420},
-  abstract  = {Distance sampling is a widely used methodology for assessing animal
+  author        = {T. A. Marques and S. T. Buckland and D. L. Borchers and D. Tosh and R. A. {McDonald}},
+  title         = {Point transect sampling along linear features},
+  journal       = {Biometrics},
+  year          = {2010},
+  volume        = {66},
+  number        = {4},
+  pages         = {1247--1255},
+  month         = {jan},
+  issn          = {1541-0420},
+  __markedentry = {[erexs:1]},
+  abstract      = {Distance sampling is a widely used methodology for assessing animal
 	abundance. A key requirement of distance sampling is that samplers
 	(lines or points) are placed according to a randomized design, which
 	ensures that samplers are positioned independently of animals. Often
@@ -738,48 +744,50 @@ Tenho IMPRESSO},
 	a survey of Irish hares in Northern Ireland conducted from roads,
 	we conclude that large bias may result if the position of samplers
 	is not randomized, and analysis methods fail to account for nonuniformity.},
-  annote    = {Summary Distance sampling is a widely used methodology for assessing animal abundance. A key requirement of distance sampling is that samplers (lines or points) are placed according to a randomized design, which ensures that samplers are positioned independently of animals. Often samplers are placed along linear features such as roads, so that bias is expected if animals are not uniformly distributed with respect to distance from the linear feature. We present an approach for analyzing distance data from a survey when the samplers are points placed along a linear feature. Based on results from a simulation study and from a survey of Irish hares in Northern Ireland conducted from roads, we conclude that large bias may result if the position of samplers is not randomized, and analysis methods fail to account for nonuniformity.},
-  doi       = {10.1111/j.1541-0420.2009.01381.x},
-  file      = {:C\:\\eric\\workshops\\distance.standrews.10\\reprints\\marques etal (2010)gradients.pdf:PDF},
-  keywords  = {distance sampling, Hare survey, Linear features, Nonrandom samplers, Nonuniform density, Point transects, Uniformity},
-  owner     = {eric},
-  publisher = {Wiley},
-  timestamp = {2010.08.19},
-  url       = {http://dx.doi.org/10.1111/j.1541-0420.2009.01381.x},
+  annote        = {Summary Distance sampling is a widely used methodology for assessing animal abundance. A key requirement of distance sampling is that samplers (lines or points) are placed according to a randomized design, which ensures that samplers are positioned independently of animals. Often samplers are placed along linear features such as roads, so that bias is expected if animals are not uniformly distributed with respect to distance from the linear feature. We present an approach for analyzing distance data from a survey when the samplers are points placed along a linear feature. Based on results from a simulation study and from a survey of Irish hares in Northern Ireland conducted from roads, we conclude that large bias may result if the position of samplers is not randomized, and analysis methods fail to account for nonuniformity.},
+  doi           = {10.1111/j.1541-0420.2009.01381.x},
+  file          = {:C\:\\eric\\workshops\\distance.standrews.10\\reprints\\marques etal (2010)gradients.pdf:PDF},
+  keywords      = {distance sampling, Hare survey, Linear features, Nonrandom samplers, Nonuniform density, Point transects, Uniformity},
+  owner         = {eric},
+  publisher     = {Wiley},
+  timestamp     = {2010.08.19},
+  url           = {http://dx.doi.org/10.1111/j.1541-0420.2009.01381.x},
 }
 
 @Article{Marques_2007,
-  author    = {Tiago A. Marques and Len Thomas and Steven G. Fancy and Stephen T. Buckland},
-  title     = {Improving estimates of bird density using multiple covariate distance sampling},
-  journal   = {The Auk},
-  year      = {2007},
-  volume    = {124},
-  number    = {4},
-  pages     = {1229-1243},
-  doi       = {10.1642/0004-8038(2007)124[1229:ieobdu]2.0.co;2},
-  file      = {:Thumb\\reprints\\Marques et al Auk 2007.pdf:PDF},
-  owner     = {eric},
-  publisher = {American Ornithologists{\textquotesingle} Union},
-  timestamp = {2011.08.23},
-  url       = {https://doi.org/10.1642/0004-8038(2007)124[1229:ieobdu]2.0.co;2},
+  author        = {Tiago A. Marques and Len Thomas and Steven G. Fancy and Stephen T. Buckland},
+  title         = {Improving estimates of bird density using multiple covariate distance sampling},
+  journal       = {The Auk},
+  year          = {2007},
+  volume        = {124},
+  number        = {4},
+  pages         = {1229-1243},
+  __markedentry = {[erexs:1]},
+  doi           = {10.1642/0004-8038(2007)124[1229:ieobdu]2.0.co;2},
+  file          = {:Thumb\\reprints\\Marques et al Auk 2007.pdf:PDF},
+  owner         = {eric},
+  publisher     = {American Ornithologists{\textquotesingle} Union},
+  timestamp     = {2011.08.23},
+  url           = {https://doi.org/10.1642/0004-8038(2007)124[1229:ieobdu]2.0.co;2},
 }
 
 @Article{Marques_2009,
-  author    = {Tiago A. Marques and Len Thomas and Jessica Ward and Nancy DiMarzio and Peter L. Tyack},
-  title     = {Estimating cetacean population density using fixed passive acoustic sensors: An example with Blainville's beaked whales},
-  journal   = {The Journal of the Acoustical Society of America},
-  year      = {2009},
-  volume    = {125},
-  number    = {4},
-  pages     = {1982--1994},
-  month     = {apr},
-  doi       = {10.1121/1.3089590},
-  file      = {:Thumb\\reprints\\Marques et al JASA 2009.pdf:PDF},
-  keywords  = {acoustic signal detection; bioacoustics; hydrophones; oceanographic techniques; underwater sound},
-  owner     = {eric},
-  publisher = {Acoustical Society of America ({ASA})},
-  timestamp = {2012.08.15},
-  url       = {https://doi.org/10.1121/1.3089590},
+  author        = {Tiago A. Marques and Len Thomas and Jessica Ward and Nancy DiMarzio and Peter L. Tyack},
+  title         = {Estimating cetacean population density using fixed passive acoustic sensors: An example with Blainville's beaked whales},
+  journal       = {The Journal of the Acoustical Society of America},
+  year          = {2009},
+  volume        = {125},
+  number        = {4},
+  pages         = {1982--1994},
+  month         = {apr},
+  __markedentry = {[erexs:1]},
+  doi           = {10.1121/1.3089590},
+  file          = {:Thumb\\reprints\\Marques et al JASA 2009.pdf:PDF},
+  keywords      = {acoustic signal detection; bioacoustics; hydrophones; oceanographic techniques; underwater sound},
+  owner         = {eric},
+  publisher     = {Acoustical Society of America ({ASA})},
+  timestamp     = {2012.08.15},
+  url           = {https://doi.org/10.1121/1.3089590},
 }
 
 @Article{Marques_2012,
@@ -820,20 +828,21 @@ Tenho IMPRESSO},
 }
 
 @Article{Marques_2011,
-  author    = {TA Marques and L Munger and L Thomas and S Wiggins and JA Hildebrand},
-  title     = {Estimating North Pacific right whale (\emph{{E}ubalaena japonica}) density using passive acoustic cue counting},
-  journal   = {Endangered Species Research},
-  year      = {2011},
-  volume    = {13},
-  number    = {3},
-  pages     = {163-172},
-  month     = {mar},
-  doi       = {10.3354/esr00325},
-  file      = {:Thumb\\reprints\\marques et al endang species res 2011.pdf:PDF},
-  owner     = {eric},
-  publisher = {Inter-Research Science Center},
-  timestamp = {2011.08.23},
-  url       = {https://doi.org/10.3354/esr00325 },
+  author        = {TA Marques and L Munger and L Thomas and S Wiggins and JA Hildebrand},
+  title         = {Estimating North Pacific right whale (\emph{{E}ubalaena japonica}) density using passive acoustic cue counting},
+  journal       = {Endangered Species Research},
+  year          = {2011},
+  volume        = {13},
+  number        = {3},
+  pages         = {163-172},
+  month         = {mar},
+  __markedentry = {[erexs:1]},
+  doi           = {10.3354/esr00325},
+  file          = {:Thumb\\reprints\\marques et al endang species res 2011.pdf:PDF},
+  owner         = {eric},
+  publisher     = {Inter-Research Science Center},
+  timestamp     = {2011.08.23},
+  url           = {https://doi.org/10.3354/esr00325 },
 }
 
 @Article{Miller_2013,
@@ -1112,16 +1121,17 @@ Tenho IMPRESSO},
 }
 
 @Article{Thomas_2010,
-  author    = {Len Thomas and Stephen T. Buckland and Eric A. Rexstad and Jeff L. Laake and Samantha Strindberg and Sharon L. Hedley and Jon R.B. Bishop and Tiago A. Marques and Kenneth P. Burnham},
-  title     = {Distance software: design and analysis of distance sampling surveys for estimating population size},
-  journal   = {Journal of Applied Ecology},
-  year      = {2010},
-  volume    = {47},
-  number    = {1},
-  pages     = {5--14},
-  month     = {feb},
-  issn      = {1365-2664},
-  abstract  = {Summary 1. Distance sampling is a widely used technique for estimating
+  author        = {Len Thomas and Stephen T. Buckland and Eric A. Rexstad and Jeff L. Laake and Samantha Strindberg and Sharon L. Hedley and Jon R.B. Bishop and Tiago A. Marques and Kenneth P. Burnham},
+  title         = {Distance software: design and analysis of distance sampling surveys for estimating population size},
+  journal       = {Journal of Applied Ecology},
+  year          = {2010},
+  volume        = {47},
+  number        = {1},
+  pages         = {5--14},
+  month         = {feb},
+  issn          = {1365-2664},
+  __markedentry = {[erexs:1]},
+  abstract      = {Summary 1. Distance sampling is a widely used technique for estimating
 	the size or density of biological populations. Many distance sampling
 	designs and most analyses use the software Distance. 2. We briefly
 	review distance sampling and its assumptions, outline the history,
@@ -1152,13 +1162,13 @@ Tenho IMPRESSO},
 	theoretical developments, state-of-the-art software that implements
 	these methods is described that makes the methods accessible to practising
 	ecologists.},
-  doi       = {10.1111/j.1365-2664.2009.01737.x},
-  file      = {:thomas et al(2010)distance.pdf:PDF},
-  keywords  = {distance sampling, line transect sampling, point transect sampling, population abundance, population density, sighting surveys, survey design, wildlife surveys},
-  owner     = {eric},
-  publisher = {Wiley},
-  timestamp = {2010.08.17},
-  url       = {http://dx.doi.org/10.1111/j.1365-2664.2009.01737.x},
+  doi           = {10.1111/j.1365-2664.2009.01737.x},
+  file          = {:thomas et al(2010)distance.pdf:PDF},
+  keywords      = {distance sampling, line transect sampling, point transect sampling, population abundance, population density, sighting surveys, survey design, wildlife surveys},
+  owner         = {eric},
+  publisher     = {Wiley},
+  timestamp     = {2010.08.17},
+  url           = {http://dx.doi.org/10.1111/j.1365-2664.2009.01737.x},
 }
 
 @Article{Thomas2007,
